# projeto-ATP2

./: CMakeLists.txt  README.md  command-line-meditor.c  example.txt  main.c  meditor.c  meditor.h  output.txt  readme.txt
meditor.dSYM/Contents/: Info.plist
meditor.dSYM/Contents/Resources/DWARF/: meditor
meditor.dSYM/Contents/Resources/Relocations/aarch64/: meditor.yml
